Bug 322971 - Crash when importing OFX (possibly because of importing two at once)
Summary: Crash when importing OFX (possibly because of importing two at once)
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 290292 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-30 03:39 UTC by Ryan Novosielski
Modified: 2013-08-29 12:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan Novosielski 2013-07-30 03:39:50 UTC
Application: kmymoney (4.6.3)
KDE Platform Version: 4.10.5
Qt Version: 4.8.4
Operating System: Linux 3.8.0-26-generic i686
Distribution: Ubuntu 13.04

-- Information about the crash:
I logged into two banks that don't allow automatic OFX importing and clicked on both of their export buttons. One was importing when the other was sent to KyMyMoney for import. Maybe the two at once caused it? It crashed after both imports happened.

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb3cf5740 (LWP 14136))]

Thread 2 (Thread 0xb10ffb40 (LWP 14139)):
#0  0xb46cc2a8 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb46cc750 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb46ccc2b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb24eebca in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#4  0xb46f1fc3 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb67d3d78 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#6  0xb51a13de in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb3cf5740 (LWP 14136)):
[KCrash Handler]
#6  QString::operator= (this=this@entry=0xd1b21a0, other=...) at tools/qstring.cpp:1410
#7  0xb64c28b5 in QDomAttrPrivate::setNodeValue (this=0xd1b2180, v=...) at dom/qdom.cpp:4137
#8  0xb64ca024 in QDomElementPrivate::setAttribute (this=0xb9ae7f0, aname=..., newValue=...) at dom/qdom.cpp:4479
#9  0xb76ecd87 in MyMoneyStatement::write (this=0x0, _root=..., _doc=0xb530ab0) at /build/buildd/kmymoney-4.6.3/kmymoney/mymoney/mymoneystatement.cpp:46
#10 0xb76eea07 in MyMoneyStatement::writeXMLFile (_s=..., _filename=...) at /build/buildd/kmymoney-4.6.3/kmymoney/mymoney/mymoneystatement.cpp:246
#11 0x080b63e3 in KMyMoneyApp::slotStatementImport (this=0xa2635b0, s=...) at /build/buildd/kmymoney-4.6.3/kmymoney/kmymoney.cpp:2297
#12 0x084bdcd4 in KMyMoneyPlugin::KMMStatementInterface::import (this=0xa8230e8, s=...) at /build/buildd/kmymoney-4.6.3/kmymoney/plugins/interfaces/kmmstatementinterface.cpp:44
#13 0xae81ffc9 in OfxImporterPlugin::importStatement (this=0xaa73738, s=...) at /build/buildd/kmymoney-4.6.3/kmymoney/plugins/ofximport/ofximporterplugin.cpp:594
#14 0xae820943 in OfxImporterPlugin::storeStatements (this=0xaa73738, statements=...) at /build/buildd/kmymoney-4.6.3/kmymoney/plugins/ofximport/ofximporterplugin.cpp:731
#15 0xae822d7b in OfxImporterPlugin::import (this=0xaa73738, filename=...) at /build/buildd/kmymoney-4.6.3/kmymoney/plugins/ofximport/ofximporterplugin.cpp:191
#16 0x080c8de9 in KMyMoneyApp::webConnect (this=0xa2635b0, url=..., asn_id=...) at /build/buildd/kmymoney-4.6.3/kmymoney/kmymoney.cpp:6680
#17 0x080d92c1 in KmymoneyAdaptor::webConnect (this=this@entry=0xa380010, url=..., asn_id=...) at /build/buildd/kmymoney-4.6.3/obj-i686-linux-gnu/kmymoney/kmymoneyadaptor.cpp:45
#18 0x080d9369 in qt_static_metacall (_a=0xbfb2e80c, _o=0xa380010, _c=<optimized out>, _id=<optimized out>) at /build/buildd/kmymoney-4.6.3/obj-i686-linux-gnu/kmymoney/kmymoneyadaptor.moc:64
#19 KmymoneyAdaptor::qt_static_metacall (_o=0xa380010, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfb2e80c) at /build/buildd/kmymoney-4.6.3/obj-i686-linux-gnu/kmymoney/kmymoneyadaptor.moc:56
#20 0x080d942c in KmymoneyAdaptor::qt_metacall (this=0xa380010, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfb2e80c) at /build/buildd/kmymoney-4.6.3/obj-i686-linux-gnu/kmymoney/kmymoneyadaptor.moc:103
#21 0xb5e9e7be in QDBusConnectionPrivate::deliverCall (this=0xa23e3e8, object=0xa380010, msg=..., metaTypes=..., slotIdx=219881856) at qdbusintegrator.cpp:951
#22 0xb5e9f03a in QDBusConnectionPrivate::activateCall (this=0xa23e3e8, object=0xa380010, flags=273, msg=...) at qdbusintegrator.cpp:856
#23 0xb5e9f7e2 in QDBusConnectionPrivate::activateObject (this=0xa23e3e8, node=..., msg=..., pathStartPos=197293825) at qdbusintegrator.cpp:1427
#24 0xb5e9fbd8 in QDBusActivateObjectEvent::placeMetaCall (this=0xcf365a0) at qdbusintegrator.cpp:1541
#25 0xb609248b in QObject::event (this=0xa2635b0, e=0xcf365a0) at kernel/qobject.cpp:1194
#26 0xb553dc1a in QWidget::event (this=0xa2635b0, event=0xcf365a0) at kernel/qwidget.cpp:8845
#27 0xb596f2ac in QMainWindow::event (this=0xa2635b0, event=0xcf365a0) at widgets/qmainwindow.cpp:1478
#28 0xb6cdfb24 in KMainWindow::event(QEvent*) () from /usr/lib/libkdeui.so.5
#29 0xb6d293e2 in KXmlGuiWindow::event(QEvent*) () from /usr/lib/libkdeui.so.5
#30 0xb54e7c7c in QApplicationPrivate::notify_helper (this=0xa0b3e38, receiver=0xa2635b0, e=0xcf365a0) at kernel/qapplication.cpp:4567
#31 0xb54eabfa in QApplication::notify (this=0xa0b3e38, receiver=0xa2635b0, e=0xcf365a0) at kernel/qapplication.cpp:4532
#32 0xb6c0e491 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#33 0xb607690e in QCoreApplication::notifyInternal (this=0xa0a9978, receiver=0xa2635b0, event=0xcf365a0) at kernel/qcoreapplication.cpp:946
#34 0xb607a721 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#35 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0xa084130) at kernel/qcoreapplication.cpp:1570
#36 0xb607aa8c in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1463
#37 0xb60a8aa4 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#38 postEventSourceDispatch (s=0xa0b0ce8) at kernel/qeventdispatcher_glib.cpp:279
#39 0xb46cc3b3 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#40 0xb46cc750 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#41 0xb46cc831 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#42 0xb60a8c21 in QEventDispatcherGlib::processEvents (this=this@entry=0xa084ea8, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#43 0xb559ea5a in QGuiEventDispatcherGlib::processEvents (this=0xa084ea8, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#44 0xb60753ec in QEventLoop::processEvents (this=this@entry=0xbfb2f2f8, flags=...) at kernel/qeventloop.cpp:149
#45 0xb60756e1 in QEventLoop::exec (this=this@entry=0xbfb2f2f8, flags=...) at kernel/qeventloop.cpp:204
#46 0xb607b3fa in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#47 0xb54e5fc4 in QApplication::exec () at kernel/qapplication.cpp:3828
#48 0x0808a3e0 in runKMyMoney (splash=0xa246250, a=<optimized out>) at /build/buildd/kmymoney-4.6.3/kmymoney/main.cpp:282
#49 0x08088931 in main (argc=1, argv=0xbfb2f764) at /build/buildd/kmymoney-4.6.3/kmymoney/main.cpp:181

Possible duplicates by query: bug 303558.

Reported using DrKonqi
Comment 1 Cristian Oneț 2013-08-29 11:16:59 UTC
*** Bug 290292 has been marked as a duplicate of this bug. ***
Comment 2 Cristian Oneț 2013-08-29 12:39:06 UTC
Git commit b1a123d6cd73f1b54fddb7d7bde6491d165f8ee6 by Cristian Oneț.
Committed on 29/08/2013 at 12:32.
Pushed by conet into branch 'master'.

Multiple imports can now be launched trough the webConnect interface
without crashing the application (the imports will be serialized).

M  +20   -0    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/b1a123d6cd73f1b54fddb7d7bde6491d165f8ee6
Comment 3 Cristian Oneț 2013-08-29 12:40:20 UTC
Git commit d47b4fd3bffaa874ec958f0816548af80b8de8d4 by Cristian Oneț.
Committed on 29/08/2013 at 12:32.
Pushed by conet into branch '4.6'.

Multiple imports can now be launched trough the webConnect interface
without crashing the application (the imports will be serialized).
(cherry picked from commit b1a123d6cd73f1b54fddb7d7bde6491d165f8ee6)

M  +20   -0    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/d47b4fd3bffaa874ec958f0816548af80b8de8d4