Multiple imports can now be launched trough the webConnect interface without crashing the application (the imports will be serialized).

BUG: 322971